semantics/oracle/snapshots/better_api_semantics__oracle__metadata__test__analyze_api_version.snap
---
source: semantics/oracle/metadata.rs
expression: oracle.reports()
---
[
    Report {
        severity: Error,
        title: "repeated `version` directive",
        label: Some(
            Label {
                message: "repeated `version` directive",
                span: Span {
                    start: 15,
                    end: 27,
                },
            },
        ),
        note: Some(
            "help: provide only one `version`",
        ),
    },
    Report {
        severity: Error,
        title: "`version` must be a string, got integer",
        label: Some(
            Label {
                message: "expected a string",
                span: Span {
                    start: 24,
                    end: 26,
                },
            },
        ),
        note: None,
    },
]
